# mindtrace

./: .gitignore  DASHBOARD_ARCHITECTURE.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_SETUP.md  FEATURE_CHECKLIST.md  README.md
client/: package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/: AddContactModal.jsx  AddReminderModal.jsx  ContactAvatar.jsx  ContactDetailModal.jsx  DashboardHeader.jsx  DashboardLayout.jsx  DeleteConfirmationModal.jsx  EditContactModal.jsx  FAQAccordionItem.jsx  FAQCategoryTabs.jsx  FAQSection.jsx  Navbar.jsx  ProtectedRoute.jsx  PublicRoute.jsx  Sidebar.jsx  ViewReminderModal.jsx
client/src/components/chatbot/: ChatInput.jsx  ChatMessage.jsx  ChatWindow.jsx  Chatbot.jsx  QuickActions.jsx  TypingIndicator.jsx  chatbot.css  index.js
client/src/components/dashboard/: DashboardHeader.jsx  (+2 more)
client/src/constants/: sosConfig.js
client/src/data/: faqData.js
client/src/hooks/: useAuthenticatedImage.js  useChat.js  useChatPersistence.js  useLocationTracking.js  useNotifications.js  useSOSAlerts.js
client/src/pages/: AiSummarizer.jsx  AlertsNotifications.jsx  AuthCallback.jsx  ContactsDirectory.jsx  DashboardHome.jsx  DashboardHome_old.jsx  ForgotPassword.jsx  HelpSupport.jsx  InteractionHistory.jsx  Landing.jsx  Login.jsx  ProfileSettings.jsx  Reminders.jsx  RemindersCalendar.jsx  SOSSettings.jsx  Signup.jsx
client/src/services/: api.js  auth.js  chatApi.js
client/src/types/: chat.types.js  sos.types.js
client/src/utils/: geocoding.js  mockLocationGenerator.js  timeFormat.js
glass-client/: package-lock.json
glass-client/src/: App.jsx  index.css
glass-client/src/components/: HUDOverlay.jsx
glass-client/src/pages/: FaceRecognition.jsx
glass-client/src/services/: api.js
server/: main.py  pyproject.toml  requirements.txt  sync_faces.py  vercel.json  verify_asr.py  verify_engine.py
server/ai_engine/: face_engine.py  rag_engine.py
server/ai_engine/asr/: __init__.py  asr_engine.py  audio_stream.py  conversation_linker.py  conversation_store.py  vad_engine.py
server/ai_engine/profiles/: embeddings.json
server/app/: app.py  chroma_client.py  database.py  models.py
server/app/routes/: alertRoutes.py  asrRoutes.py  authRoutes.py  chatRoutes.py  contactRoutes.py  faceRoutes.py  interactionRoutes.py  reminderRoutes.py  searchRoutes.py  sosRoutes.py
server/app/services/: ai_service.py
server/app/utils/: auth.py
server/data/: conversations.json
(+11 files in other folders)
